--- a/src/Components/responsive.css
+++ b/src/Components/responsive.css
@@ -16,4 +16,11 @@
         font-size: 14px;
     }
 
+    .about, .skills, .contact
+    {
+        padding: 55px 25px;
+        width: 100%;
+        height: 100%;
+    }
+
   }
