--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -23,10 +23,15 @@
     padding: 3.5vh;
     
 }
+.navigation .logo
+{
+    float: left;
+}
+
 
 .navigation .menu
 {
-    text-align: center;
+    text-align: right;
 }
 
 .navigation .menu ul li
@@ -200,7 +205,6 @@
     padding: 55px;
     width: 100%;
     height: 100%;
-    z-index: 100;
 }
 
 .profile
@@ -210,7 +214,9 @@
     -webkit-box-shadow: -13px 24px 47px -18px rgba(0,0,0,0.32);
     -moz-box-shadow: -13px 24px 47px -18px rgba(0,0,0,0.32);
     margin-bottom: 55px;
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .aboutme hr
@@ -222,12 +228,12 @@
 .aboutme .intro
 {
     color: #0e3b9c;
-    font-size: 35px; 
+    font-size: 35px;    
 }
 
-.aboutme p
+.aboutme .desc
 {
-    margin: 25px 0;
+    margin: 45px 0;
 }
 
 .aboutme .quest
@@ -264,6 +270,11 @@
 .skills .skillset li
 {
     font-weight: 300;
+}
+
+.react-sweet-progress-line
+{
+    width: 95% !important;
 }
 
 /*===================================================================*/
